# rusty-parasite

./: LICENSE-APACHE  LICENSE-MIT  README.md
para-crates/: Cargo.toml
para-crates/para-battery/: Cargo.toml
para-crates/para-battery/src/: lib.rs
para-crates/para-bthome/: Cargo.toml
para-crates/para-bthome/src/: lib.rs
para-crates/para-fmt/: Cargo.toml
para-crates/para-fmt/src/: lib.rs
para-crates/para-shtc3/: Cargo.toml
para-crates/para-shtc3/src/: crc.rs  lib.rs  types.rs
para-firmware/: Cargo.toml  rust-toolchain.toml
para-firmware/.cargo/: config.toml
para-firmware/src/: adc.rs  ble.rs  button.rs  constants.rs  led.rs  main.rs  shtc3.rs  state.rs  timer.rs
para-shtc3/: Cargo.toml
para-shtc3/src/: lib.rs  types.rs
