[package]
edition = "2024"
name = "rusty-parasite"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "nightly"] }
embassy-futures = "0.1.1"
embassy-nrf = { version = "0.3.1", features = ["nrf52840", "gpiote", "time-driver-rtc1"] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
para-shtc3 = { path = "../para-shtc3" }
static_cell = "2.1.0"

[[bin]]
name = "rusty-parasite"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true
codegen-units = 1

[profile.release]
debug = false
lto = true
opt-level = "z"
codegen-units = 1

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-nrf/defmt",
    "para-shtc3/debug"
]
