[package]
edition = "2024"
name = "rusty-parasite"
description = "Firmware for the b-parasite board, but in Rust!"
authors = ["Gonçalo Rica Pais da Silva <bluefinger@gmail.com>"]
repository = "https://github.com/Bluefinger/rusty-parasite"
license = "MIT OR Apache-2.0"
version = "0.1.0"
rust-version = "1.88.0"
resolver = "3"

[dependencies]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc/", package = "nrf-sdc", features = [
    "peripheral",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc/", package = "nrf-mpsl", features = [
    "critical-section-impl",
] }
trouble-host = { git = "https://github.com/embassy-rs/trouble/", features = [
    "derive",
    "scan",
] }
bt-hci = { version = "0.3", default-features = false }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "nightly",
] }
embassy-futures = "0.1.1"
embassy-nrf = { version = "0.3.1", features = [
    "nrf52840",
    "gpiote",
    "time-driver-rtc1",
] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embedded-hal = { version = "1.0.0" }
embedded-io = "0.6"
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
para-battery = { path = "../para-crates/para-battery" }
para-shtc3 = { path = "../para-crates/para-shtc3" }
para-bthome = { path = "../para-crates/para-bthome" }
para-fmt = { path = "../para-crates/para-fmt" }
static_cell = "2.1.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }

[[bin]]
name = "rusty-parasite"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true
codegen-units = 1

[profile.release]
debug = false
lto = true
opt-level = "z"
codegen-units = 1

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-nrf/defmt",
    "nrf-sdc/defmt",
    "nrf-mpsl/defmt",
    "para-shtc3/defmt",
    "para-bthome/defmt",
    "trouble-host/defmt",
    "bt-hci/defmt",
    "embedded-hal/defmt-03",
    "embedded-io/defmt-03",
    "para-fmt/defmt",
]
