[package]
name = "para-shtc3"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal = { version = "1.0.0" }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"], default-features = false }
linux-embedded-hal = "0.4.0"

[features]
debug = ["dep:defmt", "embedded-hal/defmt-03"]
default = []
