[package]
name = "para-battery"
description = "A crate for defining battery profiles for the rusty-parasite"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
