[package]
name = "para-bthome"
description = "A crate for defining the BTHome integration for the rusty parasite"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
heapless = "0.8.0"
defmt = { version = "1", optional = true }
para-fmt = { path = "../para-fmt" }

[features]
defmt = ["dep:defmt", "heapless/defmt-03", "para-fmt/defmt"]
