[package]
name = "para-fmt"
description = "A crate for providing fmt shims for defmt"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
defmt = { version = "1", optional = true }

[features]
defmt = ["dep:defmt"]
