[package]
name = "para-shtc3"
description = "A SHTC3 driver crate"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-hal = { version = "1.0.0" }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"], default-features = false }
linux-embedded-hal = "0.4.0"

[features]
defmt = ["dep:defmt", "embedded-hal/defmt-03"]
default = []
